# learningOpenGL

./: CMakeLists.txt
res/shaders/: triangle.shader
src/: main.cpp
